--- a/jsfiddleclone/htmls/2025-06-22-Youtube-Video-Archive.html
+++ b/jsfiddleclone/htmls/2025-06-22-Youtube-Video-Archive.html
@@ -1,6 +1,38 @@
+
+<meta charset="utf-8">
+<!---live.ver--or--offline-ver-->
+ <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #status { font-weight: bold; }
+  </style>
+<body>
+  <p>URL: <code>https://alcea-wisteria.de/ytarchive/?limit=8&extendedsearch=true</code></p>
+  <p>Status: <span id="status">Checking...</span></p>
+  <script>
+    const url = 'https://alcea-wisteria.de/PHP/0demo/2023-07-09-FetchMastodonAva/alcea/2024-08-29_alcea.pngg';
+    const redirect = 'https://alcea-wisteria.de/ytarchive/?limit=8&extendedsearch=true';
+    const statusEl = document.getElementById('status');
+    function checkImage() {
+      const img = new Image();
+      img.onload = () => {
+        statusEl.textContent = 'Online. Redirecting in 1.5 seconds...';
+        statusEl.style.color = 'green';
+        setTimeout(() => {
+          window.location.href = redirect;
+        }, 1500);
+      };
+      img.onerror = () => {
+        statusEl.textContent = 'Offline (404).';
+        statusEl.style.color = 'red';
+      };
+      img.src = url;
+    }
+    checkImage();
+  </script>
+<hr>
+
+
 <a target="_blank" href="https://codeberg.org/alceawisteria/YoutubeArchiveSuite" style=color:lightgray>src</a>
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -63,7 +95,7 @@
     .links a {
       font-size: 0.875rem;
       color: #0066cc;
-      margin-right: 1rem;
+      margin-right: 0.25rem;
       text-decoration: none;
     }
     .links a:hover {
@@ -98,8 +130,37 @@
   <h1>Youtube Video Archive</h1>
 
   [<a target="_blank" href="backup.php" style=color:blue>⬆️Upload</a>]  
-  <a target="_blank" href="https://ry3yr.github.io/list.html" style=color:blue>List</a> 
+  <a target="_blank" href="https://ry3yr.github.io/ytlist.html" style=color:blue>List</a> 
   [<a href="javascript:if(!window.location.href.includes('extendedsearch=true')){window.history.pushState({}, '', window.location.href + (window.location.href.includes('?') ? '&' : '?') + 'extendedsearch=true');}">Enable RealtimeSearch</a>]
+
+
+    <style>
+        body{font-family:Arial,sans-serif;margin:20px}.video-links{list-style-type:none;padding:0}.video-links li{margin:10px 0}.video-links a{text-decoration:none;color:#007bff;font-size:16px}.video-links a:hover{text-decoration:underline}
+    </style>
+<ul class="video-links" id="video-list"></ul>
+    <script>
+        async function fetchVideos() {
+            try {
+                const response = await fetch('videos.json?' + new Date().getTime());
+                const videos = await response.json();
+                //const latestVideos = videos.slice(0, 3);
+                const latestVideos = videos.slice(-3);
+                const videoList = document.getElementById('video-list');
+                latestVideos.forEach(video => {
+                    const listItem = document.createElement('li');
+                    const link = document.createElement('a');
+                    link.href = `?limit=8&extendedsearch=true&videoid=${video.id}`;
+                    link.textContent = `${video.title}`;
+                    listItem.appendChild(link);
+                    videoList.appendChild(listItem);
+                });
+            } catch (error) {
+                console.error("Error fetching videos:", error);
+            }
+        }
+        fetchVideos();
+    </script><hr>
+
 
   <div id="search-container">
     <input type="text" id="search" placeholder="Search videos by title, uploader, or ID..." />
@@ -158,9 +219,11 @@
       <p>Uploaded: ${new Date(v.uploaded).toLocaleString()}</p>
       <div class="links">
         <a href="${v.url}" target="_blank" class="direct-link ${unreachableClass}">Direct</a>
-        <a href="${v.waybackurl}" target="_blank">Wayback</a>
+        <a href="${v.waybackurl}" target="_blank">Wayback</a><a target="_blank" href="waybackurlcheck.html?waybackurl=${v.waybackurl}" style=color:green>(?)</a>
         <a href="javascript:void(0);" class="youtube-link" data-id="${v.id}">YouTube</a>
-        <a href="https://web.archive.org/web/2oe_/http://wayback-fakeurl.archive.org/yt/${v.id}" target="_blank" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT61taAw7gmjapOgSz2nugoCrazkCg42il25A&s" width=24px></a>
+        <a href="https://web.archive.org/web/2oe_/http://wayback-fakeurl.archive.org/yt/${v.id}" target="_blank" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT61taAw7gmjapOgSz2nugoCrazkCg42il25A&s" width=20px></a>
+          <a href="https://preservetube.com/watch?v=${v.id}" target="_blank" ><img src="https://i.ibb.co/SXjxP6v6/Screenshot-20250625-224044-Brave.png" width=20px></a>
+          <a href="https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4" target="_blank" ><img src="https://media.technologycounter.com/vendors/software-products/software-logo/hidrive.jpg" width=20px></a>
       </div>
       <button class="toggle-src" data-id="${v.id}">🔁 Switch to Direct</button>
     `;
@@ -187,16 +250,23 @@
     });
   }
 }
+try {
+  // First attempt: relative to window.location.href
+  let localUrl = new URL('videos.json', window.location.href);
+  localUrl.searchParams.set('_', Date.now());
+  let res = await fetch(localUrl.toString(), { cache: 'no-store' });
 
+  // If the first attempt fails, try relative to the current directory (`./videos.json`)
+  if (!res.ok) {
+    localUrl = new URL('./videos.json', '.');
+    localUrl.searchParams.set('_', Date.now());
+    res = await fetch(localUrl.toString(), { cache: 'no-store' });
 
-      // Load video data
-      try {
-        const localUrl = new URL('videos.json', location.href);
-        localUrl.searchParams.set('_', Date.now());
-        const res = await fetch(localUrl.toString(), { cache: 'no-store' });
-        if (!res.ok) throw new Error('Local load failed');
-        videos = await res.json();
-      } catch {
+    if (!res.ok) throw new Error('Both local attempts failed');
+  }
+
+  videos = await res.json();
+} catch {
         const res = await fetch('https://ry3yr.github.io/videos.json', { cache: 'no-store' });
         if (!res.ok) {
           errorEl.textContent = 'Failed to load videos from both sources.';
