--- a/jsfiddleclone/htmls/2025-06-22-Youtube-Video-Archive.html
+++ b/jsfiddleclone/htmls/2025-06-22-Youtube-Video-Archive.html
@@ -1,7 +1,141 @@
 
+<!--Logger-->
+  <meta charset="UTF-8">
+  <style>
+    #statusLine { 
+      //background: #333; 
+      padding: 5px 10px; 
+      //border: 1px solid #555; 
+      display: flex; 
+      justify-content: space-between; 
+      align-items: center; 
+      margin-top: -20px; 
+      cursor: pointer; 
+      opacity: 0.8;
+    }
+    #showLogs { 
+      font-size: 0.9em; 
+      text-decoration: underline; 
+      cursor: pointer; 
+      color: #66cc66; 
+    }
+    #logModal { 
+      display: none; 
+      position: fixed; 
+      z-index: 9999; 
+      left: 0; 
+      top: 0; 
+      width: 100%; 
+      height: 100%; 
+      background: rgba(0, 0, 0, 0.8);
+    }
+    #modalContent { 
+      background: #333; 
+      margin: 5% auto; 
+      padding: 20px; 
+      border: 1px solid #444; 
+      width: 80%; 
+      max-height: 70%; 
+      overflow-y: auto; 
+      white-space: pre-wrap; 
+      font-size: 0.9em; 
+      color: #ddd; 
+      line-height: 1.5;
+      opacity: 1;
+    }
+    #closeModal { 
+      float: right; 
+      cursor: pointer; 
+      font-weight: bold; 
+      color: #f8f8f8; 
+    }
+    .log-section { 
+      margin-bottom: 1em; 
+    }
+    a { 
+      color: #66ccff; 
+      text-decoration: underline; 
+    }
+    .log-entry { 
+      white-space: pre-wrap; 
+      word-wrap: break-word; 
+    }
+    #latestLog { 
+      font-size: 1.1em; 
+      color: #66cc66; 
+    }
+  </style>
+</head>
+<body>
+  <div id="statusLine">
+    <span id="latestLog">Waiting for events...</span>
+  </div>
+  <div id="logModal">
+    <div id="modalContent">
+      <span id="closeModal">[close]</span>
+      <div class="log-section"><h3>Network Logs</h3><div id="networkLogs"></div></div>
+      <div class="log-section"><h3>Console Logs</h3><div id="consoleLogs"></div></div>
+    </div>
+  </div>
+  <script>
+  const latest = document.getElementById('latestLog'), 
+        netDiv = document.getElementById('networkLogs'),
+        conDiv = document.getElementById('consoleLogs'), 
+        modal = document.getElementById('logModal'),
+        statusLine = document.getElementById('statusLine'), 
+        closeModal = document.getElementById('closeModal'),
+        netHist = [], conHist = [], seen = new Set();
+  function update(msg) { 
+    latest.textContent = msg; 
+  }
+  function formatLogWithLinks(text) {
+    const urlRegex = /(https?:\/\/[^\s]+)/g;
+    return text.replace(urlRegex, url => {
+      return `<a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a>`;
+    });
+  }
+  console.log = ((log) => (...a) => {
+    const msg = "> " + a.map(x => typeof x === "object" ? JSON.stringify(x) : x).join(" ");
+    conHist.push(msg); update(msg); log.apply(console, a);
+  })(console.log);
+  new PerformanceObserver(list => list.getEntries().forEach(async e => {
+    if (seen.has(e.name)) return; seen.add(e.name);
+    let pct = "100%";
+    let statusCode = " ";
+    if (e.transferSize && e.encodedBodySize) {
+      let val = Math.min(Math.round((e.transferSize / e.encodedBodySize) * 100), 100);
+      if (!isFinite(val)) val = 100;
+      pct = val + "%";
+    }
+    try {
+      const response = await fetch(e.name, { method: "HEAD" });
+      statusCode = response.status;
+    } catch (error) {
+      console.error('Failed to fetch status code:', error);
+      statusCode = " ";
+    }
+    const msg = "> " + e.name + " - " + pct + " loaded (Status: " + statusCode + ")";
+    netHist.push(msg); update(msg);
+  })).observe({ type: "resource", buffered: true });
+  statusLine.onclick = () => {
+    netDiv.innerHTML = netHist.length ? netHist.map(formatLogWithLinks).join('<br>') : '(no network logs yet)';
+    conDiv.innerHTML = conHist.length ? conHist.map(formatLogWithLinks).join('<br>') : '(no console logs yet)';
+    modal.style.display = 'block';
+  };
+  closeModal.onclick = () => modal.style.display = 'none';
+  window.onclick = (e) => { 
+    if (e.target == modal) modal.style.display = 'none'; 
+  };
+</script>
+<br>
+
+
+
+
+
 <meta charset="utf-8">
 <!---live.ver--or--offline-ver-->
- <style>
+<!-- <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     #status { font-weight: bold; }
   </style>
@@ -9,17 +143,17 @@
   <p>URL: <code>https://alcea-wisteria.de/ytarchive/?limit=8&extendedsearch=true</code></p>
   <p>Status: <span id="status">Checking...</span></p>
   <script>
-    const url = 'https://alcea-wisteria.de/PHP/0demo/2023-07-09-FetchMastodonAva/alcea/2024-08-29_alcea.pngg';
+    const url = 'https://alcea-wisteria.de/PHP/0demo/2023-07-09-FetchMastodonAva/alcea/2024-08-29_alcea.png';
     const redirect = 'https://alcea-wisteria.de/ytarchive/?limit=8&extendedsearch=true';
     const statusEl = document.getElementById('status');
     function checkImage() {
       const img = new Image();
       img.onload = () => {
-        statusEl.textContent = 'Online. Redirecting in 1.5 seconds...';
+        statusEl.textContent = 'Online. Redirecting in 3.0 seconds...';
         statusEl.style.color = 'green';
         setTimeout(() => {
           window.location.href = redirect;
-        }, 1500);
+        }, 3000);
       };
       img.onerror = () => {
         statusEl.textContent = 'Offline (404).';
@@ -29,7 +163,7 @@
     }
     checkImage();
   </script>
-<hr>
+<hr>-->
 
 
 <a target="_blank" href="https://codeberg.org/alceawisteria/YoutubeArchiveSuite" style=color:lightgray>src</a>
@@ -225,31 +359,47 @@
           <a href="https://preservetube.com/watch?v=${v.id}" target="_blank" ><img src="https://i.ibb.co/SXjxP6v6/Screenshot-20250625-224044-Brave.png" width=20px></a>
           <a href="https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4" target="_blank" ><img src="https://media.technologycounter.com/vendors/software-products/software-logo/hidrive.jpg" width=20px></a>
       </div>
-      <button class="toggle-src" data-id="${v.id}">🔁 Switch to Direct</button>
+      <div class="current-link"></div>
+      <button class="toggle-src" data-id="#">🔁 Switch</button>
     `;
-
     videosEl.appendChild(card);
 
-    const toggleBtn = card.querySelector('.toggle-src');
-    const videoEl = card.querySelector('video');
+const toggleBtn = card.querySelector('.toggle-src');
+const videoEl = card.querySelector('video');
+const currentLinkContainer = card.querySelector('.current-link'); // Assuming you have a container for the current link
+const sources = [
+  { url: `fin/${v.id}.mp4`, label: '🔁 Switch' },
+  { url: `https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4`, label: '🔁 Switch' },
+  { url: v.waybackurl, label: '🔁 Switch' },
+];
+let currentIndex = 0;
+toggleBtn.addEventListener('click', () => {
+  currentIndex = (currentIndex + 1) % sources.length;
+  videoEl.src = sources[currentIndex].url;
+  toggleBtn.textContent = sources[currentIndex].label;
+  let currentLink = currentLinkContainer.querySelector('a');
+  if (!currentLink) {
+    currentLink = document.createElement('a');
+    currentLink.target = '_blank';
+    currentLink.textContent = '🔗 Current Link';
+    currentLinkContainer.appendChild(currentLink);
+  }
+  currentLink.href = sources[currentIndex].url;
+  if (sources[currentIndex].url.includes("fin")) {
+    currentLink.textContent = '🔗 Direct Link';
+  } else if (sources[currentIndex].url.includes("hidrive")) {
+    currentLink.textContent = '🔗 Hidrive Link';
+  } else if (sources[currentIndex].url.includes("web.archive")) {
+    currentLink.textContent = '🔗 Archive Link';
+  }
+});
 
-    toggleBtn.addEventListener('click', () => {
-      const currentSrc = videoEl.src;
-      const usingWayback = currentSrc.includes(v.waybackurl);
-      if (usingWayback) {
-        if (v.directOk === false) {
-          alert("Direct link not available or not yet checked.");
-        } else {
-          videoEl.src = v.url;
-          toggleBtn.textContent = '🔁 Switch to Wayback';
-        }
-      } else {
-        videoEl.src = v.waybackurl;
-        toggleBtn.textContent = '🔁 Switch to Direct';
-      }
-    });
+
   }
 }
+
+
+      // Load video data
 try {
   // First attempt: relative to window.location.href
   let localUrl = new URL('videos.json', window.location.href);
