--- a/ytarchive.html
+++ b/ytarchive.html
@@ -1,5 +1,4 @@
-
-<a target="_blank" href="https://codeberg.org/alceawisteria/YoutubeArchiveSuite#https://codepen.io/ryedai1/pen/ByNGayM" style=color:lightgray>src</a>
+<a target="_blank" href="https://codeberg.org/alceawisteria/YoutubeArchiveSuite" style=color:lightgray>src</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -97,8 +96,37 @@
   <h1>Youtube Video Archive</h1>
 
   [<a target="_blank" href="backup.php" style=color:blue>⬆️Upload</a>]  
-  <a target="_blank" href="https://ry3yr.github.io/list.html" style=color:blue>List</a> 
+  <a target="_blank" href="ytlist.html" style=color:blue>List</a> 
   [<a href="javascript:if(!window.location.href.includes('extendedsearch=true')){window.history.pushState({}, '', window.location.href + (window.location.href.includes('?') ? '&' : '?') + 'extendedsearch=true');}">Enable RealtimeSearch</a>]
+
+
+    <style>
+        body{font-family:Arial,sans-serif;margin:20px}.video-links{list-style-type:none;padding:0}.video-links li{margin:10px 0}.video-links a{text-decoration:none;color:#007bff;font-size:16px}.video-links a:hover{text-decoration:underline}
+    </style>
+<ul class="video-links" id="video-list"></ul>
+    <script>
+        async function fetchVideos() {
+            try {
+                const response = await fetch('videos.json?' + new Date().getTime());
+                const videos = await response.json();
+                //const latestVideos = videos.slice(0, 3);
+                const latestVideos = videos.slice(-3);
+                const videoList = document.getElementById('video-list');
+                latestVideos.forEach(video => {
+                    const listItem = document.createElement('li');
+                    const link = document.createElement('a');
+                    link.href = `?limit=8&extendedsearch=true&videoid=${video.id}`;
+                    link.textContent = `${video.title}`;
+                    listItem.appendChild(link);
+                    videoList.appendChild(listItem);
+                });
+            } catch (error) {
+                console.error("Error fetching videos:", error);
+            }
+        }
+        fetchVideos();
+    </script><hr>
+
 
   <div id="search-container">
     <input type="text" id="search" placeholder="Search videos by title, uploader, or ID..." />
@@ -155,49 +183,72 @@
       <p>Uploader: ${v.uploader}</p>
       <p>ID: ${v.id ?? 'N/A'}</p>
       <p>Uploaded: ${new Date(v.uploaded).toLocaleString()}</p>
-            <div class="links">
+      <div class="links">
         <a href="${v.url}" target="_blank" class="direct-link ${unreachableClass}">Direct</a>
         <a href="${v.waybackurl}" target="_blank">Wayback</a><a target="_blank" href="waybackurlcheck.html?waybackurl=${v.waybackurl}" style=color:green>(?)</a>
         <a href="javascript:void(0);" class="youtube-link" data-id="${v.id}">YouTube</a>
         <a href="https://web.archive.org/web/2oe_/http://wayback-fakeurl.archive.org/yt/${v.id}" target="_blank" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT61taAw7gmjapOgSz2nugoCrazkCg42il25A&s" width=20px></a>
           <a href="https://preservetube.com/watch?v=${v.id}" target="_blank" ><img src="https://i.ibb.co/SXjxP6v6/Screenshot-20250625-224044-Brave.png" width=20px></a>
-          <a href="https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4" target="_blank" ><img src="https://media.technologycounter.com/vendors/software-products/software-logo/hidrive.jpg" width=20px></a>
+          <a href="https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4" target="_blank" ><img src="https://web.archive.org/web/20250627211837if_/https://media.technologycounter.com/vendors/software-products/software-logo/hidrive.jpg" width=20px></a>
       </div>
-      <button class="toggle-src" data-id="${v.id}">🔁 Switch to Direct</button>
+      <div class="current-link"></div>
+      <button class="toggle-src" data-id="#">🔁 Switch</button>
     `;
-
     videosEl.appendChild(card);
 
-    const toggleBtn = card.querySelector('.toggle-src');
-    const videoEl = card.querySelector('video');
+const toggleBtn = card.querySelector('.toggle-src');
+const videoEl = card.querySelector('video');
+const currentLinkContainer = card.querySelector('.current-link'); // Assuming you have a container for the current link
+const sources = [
+  { url: `fin/${v.id}.mp4`, label: '🔁 Switch' },
+  { url: `https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4`, label: '🔁 Switch' },
+  { url: v.waybackurl, label: '🔁 Switch' },
+];
+let currentIndex = 0;
+toggleBtn.addEventListener('click', () => {
+  currentIndex = (currentIndex + 1) % sources.length;
+  videoEl.src = sources[currentIndex].url;
+  toggleBtn.textContent = sources[currentIndex].label;
+  let currentLink = currentLinkContainer.querySelector('a');
+  if (!currentLink) {
+    currentLink = document.createElement('a');
+    currentLink.target = '_blank';
+    currentLink.textContent = '🔗 Current Link';
+    currentLinkContainer.appendChild(currentLink);
+  }
+  currentLink.href = sources[currentIndex].url;
+  if (sources[currentIndex].url.includes("fin")) {
+    currentLink.textContent = '🔗 Direct Link';
+  } else if (sources[currentIndex].url.includes("hidrive")) {
+    currentLink.textContent = '🔗 Hidrive Link';
+  } else if (sources[currentIndex].url.includes("web.archive")) {
+    currentLink.textContent = '🔗 Archive Link';
+  }
+});
 
-    toggleBtn.addEventListener('click', () => {
-      const currentSrc = videoEl.src;
-      const usingWayback = currentSrc.includes(v.waybackurl);
-      if (usingWayback) {
-        if (v.directOk === false) {
-          alert("Direct link not available or not yet checked.");
-        } else {
-          videoEl.src = v.url;
-          toggleBtn.textContent = '🔁 Switch to Wayback';
-        }
-      } else {
-        videoEl.src = v.waybackurl;
-        toggleBtn.textContent = '🔁 Switch to Direct';
-      }
-    });
+
   }
 }
 
 
       // Load video data
-      try {
-        const localUrl = new URL('videos.json', location.href);
-        localUrl.searchParams.set('_', Date.now());
-        const res = await fetch(localUrl.toString(), { cache: 'no-store' });
-        if (!res.ok) throw new Error('Local load failed');
-        videos = await res.json();
-      } catch {
+try {
+  // First attempt: relative to window.location.href
+  let localUrl = new URL('videos.json', window.location.href);
+  localUrl.searchParams.set('_', Date.now());
+  let res = await fetch(localUrl.toString(), { cache: 'no-store' });
+
+  // If the first attempt fails, try relative to the current directory (`./videos.json`)
+  if (!res.ok) {
+    localUrl = new URL('./videos.json', '.');
+    localUrl.searchParams.set('_', Date.now());
+    res = await fetch(localUrl.toString(), { cache: 'no-store' });
+
+    if (!res.ok) throw new Error('Both local attempts failed');
+  }
+
+  videos = await res.json();
+} catch {
         const res = await fetch('https://ry3yr.github.io/videos.json', { cache: 'no-store' });
         if (!res.ok) {
           errorEl.textContent = 'Failed to load videos from both sources.';
