--- a/o2login.html
+++ b/o2login.html
@@ -1,11 +1,11 @@
-<meta http-equiv="refresh" content="0; https://website.com">
+<meta http-equiv="refresh" content="0; https://login.o2online.de/signin/XUI/#login/">
     <script type="text/javascript">
-        window.location.href = "https://website.com"
+        window.location.href = "https://login.o2online.de/signin/XUI/#login/"
     </script>
     <title>Homepage</title>
 </head>
 <body>
     <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-    If you are not redirected automatically, follow this <a href='https://website.com'>-</a>.
+    If you are not redirected automatically, follow this <a href='https://login.o2online.de/signin/XUI/#login/'>-</a>.
 </body>
 </html>
