--- a/ytlist.html
+++ b/ytlist.html
@@ -73,8 +73,8 @@
 			const videoLink = `<a target="_blank" href="https://m.youtube.com/watch?v=${v.id}" target="_blank">${v.title}</a>`;
 			const hiDriveLink = `https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4`;
                         //const synchidrive2wayback  = `https://alceawis.de/other/extra/fetchdata/2025-06-28-FileServerUpload/2025-06-28-MultiUpload%28SFTP-FTP%29/upload.php?server=webdav.hidrive.strato.com&protocol=webdav&path=%2Fpublic%2Fytarchive%2F&upload_type=url&url=${v.waybackurl}`;
-                        const synchidrive2wayback  = `https://alceawis.de/other/extra/fetchdata/2025-06-28-FileServerUpload/2025-06-28-MultiUpload%28SFTP-FTP%29/upload.php?server=webdav.hidrive.strato.com&protocol=webdav&path=%2Fpublic%2Fytarchive%2F&upload_type=url&url=https://alcea-wisteria.de/ytarchive/fin/${v.id}.mp4`;
-const syncrouter2wayback  = `http://127.0.0.1:8080/2025-06-28-FileServerUpload/2025-06-28-MultiUpload(SFTP-FTP)/upload.php?server=192.168.0.1&protocol=ftp&path=%2F(YT-To-Upload)%2Fytarchive%2F&upload_type=url&anonymous=yes&url=https://alcea-wisteria.de/ytarchive/fin/${v.id}.mp4`;
+                        const synchidrive2wayback  = `https://alceawis.de/other/extra/fetchdata/2025-06-28-FileServerUpload/2025-06-28-MultiUpload%28SFTP-FTP%29/upload.php?server=webdav.hidrive.strato.com&protocol=webdav&path=%2Fpublic%2Fytarchive%2F&upload_type=url&url=https://alcea-wisteria.de/ytarchive/${v.id}.mp4`;
+const syncrouter2wayback  = `http://127.0.0.1:8080/2025-06-28-FileServerUpload/2025-06-28-MultiUpload(SFTP-FTP)/upload.php?server=192.168.0.1&protocol=ftp&path=%2F(YT-To-Upload)%2Fytarchive%2F&upload_type=url&anonymous=yes&url=https://alcea-wisteria.de/ytarchive/${v.id}.mp4`;
 
 
 
