--- a/ytarchive.html
+++ b/ytarchive.html
@@ -256,7 +256,7 @@ function superParseJSON(jsonString) {
           ${v.id ? `<a href="https://web.archive.org/web/2oe_/http://wayback-fakeurl.archive.org/yt/${v.id}" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT61taAw7gmjapOgSz2nugoCrazkCg42il25A&s" width="20px"></a>` : ''}
           ${v.id ? `<a href="https://preservetube.com/watch?v=${v.id}" target="_blank"><img src="https://i.ibb.co/SXjxP6v6/Screenshot-20250625-224044-Brave.png" width="20px"></a>` : ''}
           ${v.id ? `<a href="https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4" target="_blank"><img src="https://media.technologycounter.com/vendors/software-products/software-logo/hidrive.jpg" width="20px"></a>` : ''}
-          ${v.id ? `<a href="http://127.0.0.1:8080/2025-06-28-FileServerUpload/2025-06-28-MultiUpload(SFTP-FTP)/streamtplink.php?path=/(YT-To-Upload)/ytarchive/${v.id}.mp4" target="_blank"><img src="https://images.seeklogo.com/logo-png/43/1/tp-link-logo-png_seeklogo-434726.png" width="20px"></a>` : ''}
+          ${v.id ? `<a href="http://127.0.0.1:8080/2025-06-28-FileServerUpload/2025-06-28-MultiUpload(SFTP-FTP)/streamtplink.php?path=/(YT-To-Upload)/ytarchive/${v.id}.mp4&direct=1" target="_blank"><img src="https://images.seeklogo.com/logo-png/43/1/tp-link-logo-png_seeklogo-434726.png" width="20px"></a>` : ''}
         </div>
         <div class="current-link"></div>
         <button class="toggle-src" data-id="#">🔁 Switch</button>
