--- a/jsfiddleclone/htmls/2024-04-02-Bank-Value-Fetch-cost.html
+++ b/jsfiddleclone/htmls/2024-04-02-Bank-Value-Fetch-cost.html
@@ -29,7 +29,7 @@ canvas{display:block;margin:30px auto;max-width:500px}
 <p class="description">Paste your bank transaction data to extract Euro values, calculate totals, and visualize by category.</p>
 <div class="info-box">
 <strong>How to use:</strong> Paste your bank transaction data in the text area and click "Parse Transactions".
-The parser extracts all Euro amounts, uses the correct preceding line (like "Ferdinand Glogger"), and generates a categorized pie chart.
+The parser extracts all Euro amounts, uses the correct preceding line (like "Rent"), and generates a categorized pie chart.
 </div>
 <textarea id="transactionData" placeholder="Paste your bank transaction data here..."></textarea>
 <button id="parseButton">Parse Transactions</button>
