--- a/zeta-app.html
+++ b/zeta-app.html
@@ -1,11 +1,11 @@
-<meta http-equiv="refresh" content="0; https://my.hidrive.com/share/0wjwof2frs#$/AI/AudioTools/">
+<meta http-equiv="refresh" content="0; https://my.hidrive.com/share/0wjwof2frs#$/AI/AudioTools">
     <script type="text/javascript">
-        window.location.href = "https://my.hidrive.com/share/0wjwof2frs#$/AI/AudioTools/"
+        window.location.href = "https://my.hidrive.com/share/0wjwof2frs#$/AI/AudioTools"
     </script>
-    <title>Homepage</title>
+    <title>Zeta.app</title>
 </head>
 <body>
     <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-    If you are not redirected automatically, follow this <a href='https://my.hidrive.com/share/0wjwof2frs#$/AI/AudioTools/'>-</a>.
+    If you are not redirected automatically, follow this <a href='https://my.hidrive.com/share/0wjwof2frs#$/AI/AudioTools'>-</a>.
 </body>
 </html>
